v2.3.next
----------------------------------------------------------------------------------------------------
 * ACME problem reports from CAs that include parameters in the Content-Type header are handled correctly.
   (Previously, the problem text would not be reported and retries could exist CA limits.)
 * Account Update transactions to V2 CAs now use the correct POST-AS-GET method.  Previously, an
   empty JSON object was sent - which apparently LE accepted, but others reject.
 * If a CA directory includes both V1 and V2 endpoints, mod_md now will use the V2 endpoint.  Previously,
   it would prefer V1 in this unusual configuration. V2 is standard; V1 is deprecated.
 * Synchronized with Apache trunk changes, added test case for issue #218.

v2.3.3 (BETA)
----------------------------------------------------------------------------------------------------
 * MDMessageCmd and MDNotifyCmd now get common, important environment variables passed
   as well, such as PATH, SystemRoot etc - if they existed in the first place. 

v2.3.2 (BETA)
----------------------------------------------------------------------------------------------------
 * Add key usage extensions to fallback certificates; correct other extensions.
 * Correct decoding of IP addresses in certificates.
 * Add contrib directory (not yet shipped).
 * Add SeLinux policy changes necessary for mod_md in contrib/selinux.
 * `MDNotifyCmd` and `MDMessageCmd` now get the environment variable `MD_STORE` containing
    the path to the storage directory.
    Also `MD_VERSION` is added to the environment, containing the version plus an optional
    `-variation`, e.g. `-git` indicator.
 * Added very preliminary (and rough) version of contrib/md_events script.
 * test suite: test of Messages less timing dependant

v2.3.1 (BETA)
----------------------------------------------------------------------------------------------------
 * The keyname in key and certificate files is now forced lower case.