@@ -1,3 +1,5 @@
+ * Adapted test suite to run against a current letsencrypt boulder version. 
+ 
 v2.3.next
 ----------------------------------------------------------------------------------------------------
  * ACME problem reports from CAs that include parameters in the Content-Type header are handled correctly.
